--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "@becode/eslint-config": "^0.13.0",
