--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -2,13 +2,17 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://becodeorg.github.io/hamilton-7-react-project-OliviaDemaret/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
